syntax = "proto3";

option csharp_namespace = "GrpcService";

package patient;

service Patient {
  rpc CreateAsync (PatientObj) returns (PatientObj);
  rpc GetAsync (PatientVoid) returns (PatientList);
  rpc GetUser (Name) returns (PatientObj);
}

message PatientObj {
  int32 id = 1;
<<<<<<< Updated upstream
  string username = 2;
  string fullname = 3;
=======
  string fullname = 2;
  string username = 3;
>>>>>>> Stashed changes
  string password = 4;
}

message Name {
  string name = 1;
}

message PatientVoid {

}

message PatientList {
  repeated PatientObj patients = 1;
}
